syntax = "proto3";
package tgvalidatord;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "request.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message ContractTemplateResource {
  string id = 1;
  uint64 tenantID = 2;
  uint64 version = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Resource version. Not to be confused with the Contract Version"
  }];
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;

  string blockchain = 6;
  string name = 7;
  ContractTemplateType contractTemplateType = 8;
  string contractVersion = 9;
  string deploymentData = 10 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Data needed for contract deployment. If this is empty the contract is not deployable."
  }];
  string author = 11;
  string description = 12;
  repeated ContractTemplateAttribute attributes = 13;
  bool provided = 14 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "If true, the template is provided out of the box by Taurus."
  }];
  bool audited = 15 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "If true, the template is marked as have been audited. The audit"
  }];

  BlockchainContractTemplate contractTemplate = 16;
}

enum ContractTemplateType {
  Unknown = 0;
  CustomEVM = 1;
  CMTA20Token = 2;
  CMTA20RuleEngine = 3;
  CMTA20KycRule = 4;
  ERC1400UniversalToken = 5;
  ERC2771ProxyAdmin = 6;
  TransparentUpgradeableProxy = 7;
  CMTATToken = 8;
  CMTATStandalone = 9;
  CMTATUpgradeable = 10;
  TERC1155A = 11;
  TERC20Standalone = 12;
  TERC20Upgradeable = 13;
  TERC721Standalone = 14;
  TERC721Upgradeable = 15;
  CustomXTZ = 16;
  SmartPyFA12Token = 17;
  SmartPyFA2NFT = 18;
}

message ContractTemplateAttribute {
  string key = 1;
  string value = 2;
}

message BlockchainContractTemplate {
  oneof template{
    CustomEVMContractTemplate customEVM = 1;
    CMTA20TokenContractTemplate cmta20Token = 2;
    CMTA20RuleEngineContractTemplate cmta20RuleEngine = 3;
    CMTA20KycRuleContractTemplate cmta20KycRule = 4;
    ERC1400UniversalTokenContractTemplate erc1400UniversalToken = 5;
    ERC2771ProxyAdminContractTemplate erc2771ProxyAdmin = 6;
    TransparentUpgradeableProxyContractTemplate transparentUpgradeableProxy = 7;
    CMTATTokenContractTemplate cmtatToken = 8;
    CMTATStandaloneContractTemplate cmtatStandalone = 9;
    CMTATUpgradeableContractTemplate cmtatUpgradeable = 10;
    TERC1155AContractTemplate terc1155A = 11;
    TERC20StandaloneContractTemplate terc20Standalone = 12;
    TERC20UpgradeableContractTemplate terc20Upgradeable = 13;
    TERC721StandaloneContractTemplate terc721Standalone = 14;
    TERC721UpgradeableContractTemplate terc721Upgradeable = 15;
    CustomXTZContractTemplate customXTZ = 16;
    SmartPyFA12TokenContractTemplate smartPyFA12Token = 17;
    SmartPyFA2NFTContractTemplate smartPyFA2NFT = 18;
  }
}

message CustomEVMContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CMTA20TokenContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CMTA20RuleEngineContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CMTA20KycRuleContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message ERC1400UniversalTokenContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message ERC2771ProxyAdminContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message TransparentUpgradeableProxyContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CMTATTokenContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CMTATStandaloneContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CMTATUpgradeableContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message TERC1155AContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message TERC20StandaloneContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message TERC20UpgradeableContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message TERC721StandaloneContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message TERC721UpgradeableContractTemplate {
  EVMContractTemplateParams evm = 1;
}

message CustomXTZContractTemplate {
  XTZContractTemplatePrams xtz = 1;
}

message SmartPyFA12TokenContractTemplate {
  XTZContractTemplatePrams xtz = 1;
}

message SmartPyFA2NFTContractTemplate {
  XTZContractTemplatePrams xtz = 1;
}

message EVMContractTemplateParams {
  string abi = 1;
  bool upgradeable = 2;
  bool feepayerSupport = 3;
}

message XTZContractTemplatePrams {
  repeated XTZEntrypoint entryPoints = 1;
  repeated XTZView views = 2;
}

// xtz

message XTZEntrypoint {
  string name = 1;
  XTZContractArg type = 2;
  XTZPrimSchema schema = 3;
  bool legacyView = 4;
}

message XTZView {
  string name = 1;

  XTZContractArg argType = 2;
  XTZPrimSchema argSchema = 3;

  XTZContractArg returnType = 4;
  XTZPrimSchema returnSchema = 5;
}

message XTZPrimSchema {
  string type = 1;
  string title = 2;
  string prim = 3;
  string typeSignature = 4;
  string format = 5;
  string default = 6;
  repeated XTZPrimSchema properties = 7;
  bool namedPair = 8;
  string const = 9;
}